# USC-AME556_Robot_Dynamics_and_Control

FP/: BipedRobot.cpp  BipedRobot.h  CMakeLists.txt  README.md  RobotController.cpp  RobotController.h  SimulationUI.cpp  SimulationUI.h  context.md  main.cpp  plot_robot_data.m  robot.xml
FP/task1_1/: robot_data_task_1_1.csv
FP/task1_2/: robot_data_task_1_2.csv
FP/task1_3/: robot_data_task_1_3.csv
FP/task2/: robot_data.csv
HW1/: No3.m  No4.m  No6.m  No63.m  test.m
HW2/: No1.m  No1_Ex.m  No2.m  No3.m  README.md
HW2/2/: CMakeLists.txt  No2.m  angle.csv  cartpole.xml  cartpole_mujoco.mov  mujoco.cpp  position.csv
HW2/3/: No3.m
HW3/: README.md
HW3/1/: CMakeLists.txt  bar.cpp  bar.xml  free_falling_bar.mov  plot_results.m  theta.csv  x.csv  z.csv
HW3/2/: CMakeLists.txt  plot_robot_control_data.m  plot_robot_data.m  robot.cpp  robot.xml  robot_control.mov  robot_control_data.csv  robot_data.csv  robot_free.mov  robot_pd_control.cpp
HW3/3/: cartpole.m  cartpole_lqr_matlab.mov
HW4/: README.md
HW4/1/: CMakeLists.txt  LQR_cartpole_control.cpp  LQR_result_case1.csv  LQR_result_case2.csv  LQR_result_case3.csv  MPC_cartpole_control.cpp  MPC_result.csv  QP_cartpole_control.cpp  QP_result.csv  cartpole.xml  cartpole_control.cpp  plot_results.m
HW4/2/: CMakeLists.txt  MPC_robot_control.cpp  QP_robot_control.cpp  plot_results.m  robot.xml
